@@ -8,8 +8,11 @@
  */
 
 
-define( function() {
+define( function( require ) {
   'use strict';
+
+  var PhetFont = require( 'SCENERY_PHET/PhetFont' );
+  var ShadowText = require( 'SCENERY_PHET/ShadowText' );
 
   return Object.freeze( {
     UNBALANCED_COLOR: 'rgb(46,107,178)',
@@ -18,7 +21,9 @@ define( function() {
     GAME_CANVAS_BACKGROUND: '#ffffe4',
     BOX_COLOR: 'white',
     ATOM_OPTIONS: { stroke: 'black', lineWidth: 0.5 },
-    MOLECULE_SCALE_FACTOR: 0.37 // scale all molecules by scaleFactor to fit design
+    MOLECULE_SCALE_FACTOR: 0.37, // scale all molecules by scaleFactor to fit design
+    CORRECT_ICON: new ShadowText( '\u2713', { fill: 'rgb(251,247,0)', font: new PhetFont( 72 ) } ), // heavy-ballot check mark
+    INCORRECT_ICON: new ShadowText( '\u2718', { fill: 'rgb(252,104,0)', font: new PhetFont( 72 ) } ) // big X
   } );
 
 } );
